--- a/app/src/main/res/layout/first_then_fragment.xml
+++ b/app/src/main/res/layout/first_then_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -50,7 +50,7 @@
                 app:layout_constraintBottom_toBottomOf="parent" android:minHeight="25dp" android:minWidth="25dp"
                 android:contentDescription="@string/thenImg"/>
     </LinearLayout>
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:src="@android:drawable/ic_lock_lock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,4 +58,4 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent"
             app:backgroundTint="@color/fabColor" android:layout_marginBottom="5dp" android:layout_marginEnd="5dp"
             android:focusable="true"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
